# AgentHouse

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
crates/agenthouse/: Cargo.toml
crates/agenthouse/assets/fonts/geist/: LICENSE.md
crates/agenthouse/src/: control_server.rs  lib.rs  main.rs  shell.rs
crates/ah-app/: Cargo.toml
crates/ah-app/assets/fonts/geist/: LICENSE.md
crates/ah-app/src/: lib.rs  main.rs  shell.rs
crates/ah-block/: Cargo.toml
crates/ah-block/src/: lib.rs
crates/ah-control/: Cargo.toml
crates/ah-control/src/: lib.rs
crates/ah-core/: Cargo.toml
crates/ah-core/src/: lib.rs
crates/ah-session/: Cargo.toml
crates/ah-session/src/: lib.rs
crates/ah-store/: Cargo.toml
crates/ah-store/src/: lib.rs
crates/ah-terminal/: Cargo.toml
crates/ah-terminal/src/: lib.rs
crates/ah-use/: Cargo.toml
crates/ah-use/src/: lib.rs  main.rs
crates/ah-web/: Cargo.toml
crates/ah-web/src/: lib.rs
crates/ah-webview-linux/: Cargo.toml
crates/ah-webview-linux/src/: lib.rs
crates/ah-webview-macos/: Cargo.toml  build.rs
crates/ah-webview-macos/src/: dispatch_shim.c  lib.rs
crates/ah-workspace/: Cargo.toml
crates/ah-workspace/src/: lib.rs
docs/: AGENTHOUSE_USE.md  ALPHA_RELEASE.md  ARCHITECTURE.md  BETA_RELEASE.md  DECISIONS.md  ROADMAP.md
docs/research/: warp-zed-architecture-report.md  warp-zed-license-report.md  warp-zed-ui-terminal-comparison.md  yazi-architecture-report.md  yazi-license-report.md
scripts/: check-release-licenses.sh
skills/agenthouse-development/: SKILL.md
xtask/: Cargo.toml
xtask/src/: main.rs
