[package]
name = "ah-block"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ah-core.workspace = true
ah-session.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
