[package]
name = "ah-terminal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ah-core.workspace = true
ah-session.workspace = true
alacritty_terminal.workspace = true
anyhow.workspace = true
portable-pty.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
