[package]
name = "ah-use"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ah-control.workspace = true
ah-core.workspace = true
ah-terminal.workspace = true
ah-workspace.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
