[package]
name = "ah-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ah-core.workspace = true
serde.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
