[package]
name = "ah-webview-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ah-core = { path = "../ah-core" }
ah-web = { path = "../ah-web" }
webkit2gtk = { version = "2.0", features = ["v2_40"] }
gtk = "0.18"
glib = "0.18"
gio = "0.18"
cairo-rs = { version = "0.18", features = ["png"] }
tracing.workspace = true

[lints]
workspace = true
