[package]
name = "ah-webview-macos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[target.'cfg(target_os = "macos")'.dependencies]
ah-web = { path = "../ah-web" }
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSBezierPath", "NSColor", "NSGraphics", "NSView", "NSWindow", "NSGraphicsContext", "NSBitmapImageRep", "NSRunningApplication"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGImage"] }
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString", "NSURL", "NSURLRequest", "NSData", "NSDictionary", "NSArray", "NSEnumerator", "NSError"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKWebsiteDataStore", "WKNavigationDelegate", "WKUIDelegate", "WKUserContentController", "WKUserScript", "WKSnapshotConfiguration", "WKNavigation", "WKNavigationAction", "WKFrameInfo", "WKWebpagePreferences", "WKWindowFeatures", "objc2-app-kit"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"
